--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,7 @@ dependencies {
     //ui
     implementation 'com.astuetz:pagerslidingtabstrip:1.0.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.contrarywind:Android-PickerView:3.2.7'
+    implementation project(':library')
+
 }
